Some styles are updated in the related articles section,styles are created for screens up to 768px

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/media.css" />
     <title>Jamming 2020: Todo lo que debes saber</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
     <header class="header">
       <section class="header__container">
-        <img src="/assets/logo-waves-blog.png" alt="Logo-Waves-Blog" />
+        <a href="index.html">
+          <img src="/assets/logo-waves-blog.png" alt="Logo-Waves-Blog" />
+        </a>
       </section>
     </header>
     <section class="blog__container">
