--- a/blog.html
+++ b/blog.html
@@ -26,8 +26,79 @@
         harán vibrar al público al ritmo de varios géneros musicales como:
         rock, reggae, ska, salsa, hip hop, dancehall, afro beat, entre
         otros ....</p> <a class="banner__content__link" href="index.html">Ver más</a>
-      
+
     </div>
+
+  </section>
+
+  <section class="blogs-views">
+
+    <div class="blogs-views__item">
+      <img src="https://source.unsplash.com/collection/136493/600x600" alt="Imagen de entrada de blog">
+      <div class="blogs-views__content">
+        <h2>Entrevista a Ana Luminita Ortiz Wienken</h2>
+        <p>La música es el motor de nuestra sociedad, que nos lleva a seguir evolucionando y creando nuevos conceptos de comunicación</p>
+        <a href="#">Ver</a>
+      </div>
+    </div>
+
+    <div class="blogs-views__item">
+      <img src="https://source.unsplash.com/collection/136493/600x600" alt="Imagen de entrada de blog">
+      <div class="blogs-views__content">
+        <h2>Entrevista a Ana Luminita Ortiz Wienken</h2>
+        <p>La música es el motor de nuestra sociedad, que nos lleva a seguir evolucionando y creando nuevos conceptos de comunicación</p>
+        <a href="#">Ver</a>
+      </div>
+    </div>
+    <div class="blogs-views__item">
+      <img src="https://source.unsplash.com/collection/136493/600x600" alt="Imagen de entrada de blog">
+      <div class="blogs-views__content">
+        <h2>Entrevista a Ana Luminita Ortiz Wienken</h2>
+        <p>La música es el motor de nuestra sociedad, que nos lleva a seguir evolucionando y creando nuevos conceptos de comunicación</p>
+        <a href="#">Ver</a>
+      </div>
+    </div>
+    <div class="blogs-views__item">
+      <img src="https://source.unsplash.com/collection/136493/600x600" alt="Imagen de entrada de blog">
+      <div class="blogs-views__content">
+        <h2>Entrevista a Ana Luminita Ortiz Wienken</h2>
+        <p>La música es el motor de nuestra sociedad, que nos lleva a seguir evolucionando y creando nuevos conceptos de comunicación</p>
+        <a href="#">Ver</a>
+      </div>
+    </div>
+    <div class="blogs-views__item">
+      <img src="https://source.unsplash.com/collection/136493/600x600" alt="Imagen de entrada de blog">
+      <div class="blogs-views__content">
+        <h2>Entrevista a Ana Luminita Ortiz Wienken</h2>
+        <p>La música es el motor de nuestra sociedad, que nos lleva a seguir evolucionando y creando nuevos conceptos de comunicación</p>
+        <a href="#">Ver</a>
+      </div>
+    </div>
+    <div class="blogs-views__item">
+      <img src="https://source.unsplash.com/collection/136493/600x600" alt="Imagen de entrada de blog">
+      <div class="blogs-views__content">
+        <h2>Entrevista a Ana Luminita Ortiz Wienken</h2>
+        <p>La música es el motor de nuestra sociedad, que nos lleva a seguir evolucionando y creando nuevos conceptos de comunicación</p>
+        <a href="#">Ver</a>
+      </div>
+    </div>
+    <div class="blogs-views__item">
+      <img src="https://source.unsplash.com/collection/136493/600x600" alt="Imagen de entrada de blog">
+      <div class="blogs-views__content">
+        <h2>Entrevista a Ana Luminita Ortiz Wienken</h2>
+        <p>La música es el motor de nuestra sociedad, que nos lleva a seguir evolucionando y creando nuevos conceptos de comunicación</p>
+        <a href="#">Ver</a>
+      </div>
+    </div>
+    <div class="blogs-views__item">
+      <img src="https://source.unsplash.com/collection/136493/600x600" alt="Imagen de entrada de blog">
+      <div class="blogs-views__content">
+        <h2>Entrevista a Ana Luminita Ortiz Wienken</h2>
+        <p>La música es el motor de nuestra sociedad, que nos lleva a seguir evolucionando y creando nuevos conceptos de comunicación</p>
+        <a href="#">Ver</a>
+      </div>
+    </div>
+
 
   </section>
   <footer class="footer__container">
